automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,14 +439,13 @@
        "list"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_travel_cities)\n",
-    "type(top_)"
+    "type(top_travel_cities)\n"
    ]
   },
   {
