--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -464,22 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['Walla Walla Valley', 'Marakesh']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[4:3]"
+    "top_travel_cities[4:6]"
    ]
   },
   {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
