automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -665,11 +665,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities.append('San Antonio')"
+    "top_travel_cities.append('Johannesburg')"
    ]
   },
   {
