automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -763,16 +763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'San Antonio'"
+       "'Johannesburg'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
