--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1101,28 +1101,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
-       " 'Los Cabos',\n",
-       " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       "['Greenville',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
+       " 'Buenos Aires',\n",
+       " 'Albuquerque',\n",
+       " 'Iguazu Falls',\n",
+       " 'Solta',\n",
+       " 'Archipelago Sea',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
        " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Los Cabos']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
        "13"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
        "14"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
